--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "mocha",
     "start": "node server",
     "dev": "nodemon server",
-    "debug": "nodemon --inspect server"
+    "debug": "nodemon --inspect server",
+    "predeploy": "npm audit",
+    "deploy": "git push heroku master"
   },
   "keywords": [],
   "engines": {
